crates/schema/tests/compile_fail/builder_closure_boolean_no_option.stderr
error[E0599]: no method named `option` found for struct `BooleanBuilder` in the current scope
 --> tests/compile_fail/builder_closure_boolean_no_option.rs:7:59
  |
7 |         .boolean(nebula_schema::field_key!("flag"), |b| b.option(json!(1), "X"))
  |                                                           ^^^^^^ method not found in `BooleanBuilder`
